--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="credits-scene" id="creditsScene">
   <div class="credits-photo" id="creditsPhoto"></div>
   <div class="credits-text" id="creditsText">
-    Cheers to being with you for 5 years 🥂
+    Cheers to being together for 5 years 🥂
   </div>
 </div>
 
@@ -82,3 +82,4 @@
 
 </body>
 </html>
+
